# CareBridge-Local

./: .gitignore  README.md  app.py  package-lock.json  package.json  plan1.md  plan2.md
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: api.ts  (+3 more)
apps/web/: package.json  tsconfig.json
docs/: RESUME_HIGHLIGHTS.md  REVIEWER_QUICKSTART.md  USER_GUIDE.md  api-contract.md  architecture.md  model-setup.md
knowledge-packs/base-health/: manifest.json
release/: CareBridgeLocal-Setup-1.0.0.exe.sha256  START-HERE.txt
scripts/: build-backend.ps1  build-desktop.ps1  package-reviewer-kit.ps1  prepare-runtime-bundle.ps1  run-dev.ps1  setup-models.ps1
services/local-core/: README.md  carebridge-local-core.spec  pyproject.toml
services/local-core/.tmp_testdata/: retrieval-a510f2f831fa4c40958e6ef08911c820.db
services/local-core/carebridge_local_core/: __init__.py  __main__.py  app.py  config.py  exporter.py  knowledge.py  model_manager.py  models.py  retrieval.py  runtime.py  storage.py  triage.py
services/local-core/carebridge_local_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/local-core/carebridge_local_core/inference/: __init__.py  base.py  llamacpp.py  ollama.py
services/local-core/tests/: test_retrieval.py  test_triage.py
submission/: README.md  demo-runbook.md  judging-mapping-final.md  judging-mapping.md  kaggle-writeup-copy.md  kaggle-writeup-final.md  kaggle-writeup-template.md  media-checklist.md  release-notes-v1.0.0.md  release-notes-v1.md  video-script-final.md  video-script.md
(+12 files in other folders)
